# osmoweb-tools

./: .gitignore  .pre-commit-config.yaml  README.md  format_code.sh
.github/workflows/: shell-ci.yml
scripts/: build_osmo.sh  control_osmo.sh  start_osmo.sh  stop_osmo.sh  watch_osmo_logs.sh
scripts/lib/: libosmolog.sh  libosmops.sh
tests/: test_libosmolog.sh  test_osmolib.sh
ws-udp-proxy/: .clang-format  CMakeLists.txt  README.md  install_dependencies.sh  main.cpp  ws_udp_proxy.cpp  ws_udp_proxy.h
